puppet/testdata/highlighting/error.pp
class name<error descr="'(', '::', INHERITS or '{' expected, got '}'"> </error><error descr="Unknown tokens">}</error>

